@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-2086] Fixed a few bugs in package management styling
 - Tweaks to context menu styling
 - [#MODX-2078] Context menus now show under cursor
 - [#MODX-2083] Fixed bug where setting editedon was returning invalid date
